------------------------------------------------------------------------
0.0102  UNRELEASED      Piotr Roszatycki <dexter@cpan.org>

* Handles errors in threads and converts them into warnings.
* Increased default max-reqs-per-child to 1000.

------------------------------------------------------------------------
0.0101  2013-06-15      Piotr Roszatycki <dexter@cpan.org>

* Build.PL checks if threads are available.

------------------------------------------------------------------------
0.01    2013-06-15      Piotr Roszatycki <dexter@cpan.org>

* First CPAN release.

------------------------------------------------------------------------